# rad-in-rust

./: .gitignore  Cargo.toml  par_submit.SBATCH  parallel.py  plot_disp.py  submit.SBATCH
ndarray-linalg/ndarray-linalg/src/: convert.rs  expm.rs  lib.rs  normest1.rs
src/: build_hamiltonian.rs  graph_disp.rs  graphing.rs  main.rs  pa_hamiltonian.rs  parameters.rs  rad_hamiltonian.rs  routines.rs  solve_hamiltonian.rs
