[package]
name = "rad-in-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-complex = "*"
gnuplot = "*"
libm = "*"
ndarray = "0.15.6"
ndarray-linalg = { version = "0.16", features = ["openblas-system"] }
rustfft = "*"
indicatif = {version = "*", features = ["rayon"]}
rayon = "*"
expm = "*"