[package]
name = "rad-in-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-complex = "0.4.4"
gnuplot = "0.0.39"
libm = "0.2.7"
ndarray = "0.15.6"
ndarray-linalg = {path = "./ndarray-linalg/ndarray-linalg/", version = "*", features = ["intel-mkl-static"]}
# ndarray-linalg = {path = "./ndarray-linalg/ndarray-linalg/", version = "*", features = ["openblas-system"]}
# rustfft = "*"
indicatif = {version = "*", features = ["rayon"]}
rayon = "1.7.0"
# expm = "*"
statrs = "0.16.0"
condest = "0.2.1"
cblas = "0.4.0"
ndarray-csv = "0.5.2"
csv = "1.2.2"
ndarray-npy = "0.8.1"
plotters = "0.3.5"